Upgraded to java 25 (#22)
- VScode support completely gone

Co-authored-by: Delice0 <59118341+Delice0@users.noreply.github.com>