@@ -1,7 +1,6 @@
 @echo off
 set JLINK_VM_OPTIONS=^
 --add-modules jdk.jdeps ^
---add-exports jdk.jdeps/com.sun.tools.classfile=ALL-UNNAMED ^
 --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED ^
 --add-exports jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED ^
 --add-exports jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED ^
@@ -25,4 +24,5 @@ set JLINK_VM_OPTIONS=^
 --add-opens jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED ^
 --add-opens jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
 set CLASSPATH_OPTIONS=-classpath "%~dp0classpath/*"
-java %JLINK_VM_OPTIONS% %CLASSPATH_OPTIONS% %*
+set JAVA_BIN=%~dp0windows\bin\java.exe
+"%JAVA_BIN%" %JLINK_VM_OPTIONS% %CLASSPATH_OPTIONS% %*
